appId: com.hinoka.hideandseek.v2
---
- launchApp
- runFlow:
      when:
          visible: "Open"
      commands:
          - tapOn: "Open"
- runFlow:
      when:
          visible: "Continue"
      commands:
          - tapOn: "Continue"
- extendedWaitUntil:
      visible: "Tokyo 23 Wards"
      timeout: 60000
- assertVisible:
      id: "main-settings-row"
